SERVER-35921 Make IXSCAN use the proper MinKey/MaxKey bounds on LT and GT

(cherry picked from commit b1285a2acb60cbf7c268cb5499fbf5d674d490b2)