jstests/core/min_max_key.js
@@ -89,9 +89,6 @@ testQueriesWithMinOrMaxKey();
 testTypeBracketedQueries();
 
 assert.commandWorked(coll.createIndex({a: 1}));
-// TODO: SERVER-35921 The results of the queries above should not change based on the
-// presence of an index
-assert.commandWorked(coll.dropIndexes());
 
 testQueriesWithMinOrMaxKey();
 testTypeBracketedQueries();
